# code-challenge-2024-xonx4l

./: rough.md  run.sh
mineBlock/: Cargo.toml  output.txt
mineBlock/src/: block.rs  main.rs  mempool.rs  mining.rs  transaction.rs
